# bkmr

./: .bumpversion.cfg  .envrc  .gitignore  .pdm-python  .run  .tool-versions  .workmux.yaml  ARCHITECTURE-REVIEW.md  ARCHITECTURE.md  AUTHORS  CONTRIBUTING.md  ERROR_HANDLING.md  LICENSE  Makefile  Pipfile  README.md  README.old.md  TODO.md  analysis.md  example.md  import-plan.md  llm_todo.md  lsp-consolidation.md  optimization.md  prompt_plan.md  pyproject.toml  refac-di.md  scratch.md
.github/workflows/: xxx.yml  (+3 more)
bkmr/: Cargo.toml  diesel.toml
bkmr/migrations/: README.md
bkmr/migrations/2022-12-29-110455_create_bookmarks/: up.sql
bkmr/migrations/2023-12-17-200409_add_embedding_and_content_hash_to_bookmarks/: down.sql  up.sql
bkmr/migrations/2025-03-23-132320_add_created_at/: down.sql  up.sql
bkmr/migrations/2025-06-25-161419_add_file_columns/: down.sql  up.sql
bkmr/migrations/2026-01-23-100000_add_opener_column/: down.sql  up.sql
bkmr/migrations/2026-04-03-100000_add_accessed_at/: down.sql  up.sql
bkmr/migrations/2026-04-04-100000_add_vec_bookmarks/: down.sql  up.sql
bkmr/src/: app_state.rs  bms.rs  config.rs  context.rs  dal.rs  default_config.toml  embeddings.rs  environment.rs  exitcode.rs  fzf.rs  helper.rs  lib.rs  macros.rs  main.rs  models.rs  process.rs  schema.rs  tag.rs
bkmr/src/adapter/: dal.rs  embeddings.rs  json.rs  schema.rs
bkmr/src/adapter/dal/: migration.rs
bkmr/src/adapter/embeddings/: mod.rs  providers.rs  utils.rs
bkmr/src/application/: README.md  error.rs  mod.rs
bkmr/src/application/actions/: default_action.rs  env_action.rs  markdown_action.rs  memory_action.rs  mod.rs  shell_action.rs  snippet_action.rs  text_action.rs  uri_action.rs
bkmr/src/application/dto/: README.md  bookmark_dto.rs  mod.rs  tag_dto.rs
bkmr/src/application/services/: action_service.rs  bookmark_application_service.rs  bookmark_service.rs  bookmark_service_impl.rs  embedding_service.rs  factory.rs  interpolation.rs  interpolation_service.rs  migration_service.rs  mod.rs  search.rs  tag.rs  tag_application_service.rs  tag_service.rs  tag_service_impl.rs  template_service.rs
bkmr/src/application/templates/: bookmark_template.rs  mod.rs
bkmr/src/cli/: args.rs  bookmark_commands.rs  command_handler.rs  commands.rs  completion.rs  display.rs  error.rs  fzf.rs  hsearch_handler.rs  mod.rs  process.rs  tag_commands.rs
bkmr/src/cli/commands/: bookmark_commands.rs  mod.rs  tag_commands.rs
bkmr/src/domain/: action.rs  action_resolver.rs  bookmark.rs  embedding.rs  error.rs  error_context.rs  mod.rs  search.rs  system_tag.rs  tag.rs
bkmr/src/domain/interpolation/: errors.rs  interface.rs  mod.rs
bkmr/src/domain/repositories/: bookmark_repository.rs  import_repository.rs  mod.rs  query.rs  repository.rs  vector_repository.rs
bkmr/src/domain/services/: bookmark_application_service_test.rs  bookmark_service.rs  clipboard.rs  mod.rs  tag_service.rs
bkmr/src/infrastructure/: clipboard.rs  embeddings.rs  error.rs  http.rs  json.rs  mod.rs
bkmr/src/infrastructure/config/: default_config.toml  mod.rs
bkmr/src/infrastructure/di/: mod.rs  service_container.rs  test_container.rs
bkmr/src/infrastructure/embeddings/: dummy_provider.rs  fastembed_provider.rs  mod.rs  model.rs  openai_provider.rs
bkmr/src/infrastructure/interpolation/: minijinja_engine.rs  mod.rs
bkmr/src/infrastructure/repositories/: file_import_repository.rs  json_import_repository.rs  mod.rs  null_vector_repository.rs
bkmr/src/infrastructure/repositories/in_memory/: bookmark_repository.rs  mod.rs
bkmr/src/infrastructure/repositories/sqlite/: bookmark_repository.rs  connection.rs  error.rs  migration.rs  mod.rs  model.rs  models.rs  repository.rs  schema.rs  vector_repository.rs
bkmr/src/lsp/: backend.rs  error.rs  mod.rs
bkmr/src/lsp/di/: lsp_service_container.rs  mod.rs
bkmr/src/lsp/domain/: completion.rs  language.rs  mod.rs  snippet.rs
bkmr/src/lsp/services/: command_service.rs  completion_service.rs  document_service.rs  language_translator.rs  mod.rs  snippet_service.rs
bkmr/src/lsp/tests/: mod.rs
bkmr/src/model/: bms.rs  bookmark.rs  tag.rs
bkmr/src/service/: embeddings.rs  fzf.rs  process.rs
bkmr/src/util/: argument_processor.rs  helper.rs  interpolation.rs  mod.rs  path.rs  test_context.rs  test_service_container.rs  testing.rs  validation.rs
bkmr/tests/: adapter.rs  test_base_path_config.rs  test_bms.rs  test_dal.rs  test_embeddings.rs  test_fzf.rs  test_import.rs  test_lib.rs  test_main.rs  test_models.rs  test_process.rs
bkmr/tests/adapter/: test_json.rs
bkmr/tests/application/services/: mod.rs  test_bookmark_service_impl_load_json_bookmarks.rs  test_bookmark_service_impl_search.rs
bkmr/tests/cli/: mod.rs  test_add_stdin.rs  test_bookmark_commands.rs  test_new_features.rs  test_open_no_edit.rs  test_search.rs
bkmr/tests/infrastructure/: mod.rs
bkmr/tests/infrastructure/interpolation/: minijinja_engine_test.rs  mod.rs
bkmr/tests/resources/: README.md  bookmarks.ndjson  data.ndjson  invalid_data.ndjson  sample_docu.md  schema_v1_migration_test.db  schema_v2_with_embeddings.db  snips.json
bkmr/tests/resources/import_test/docs/: api-reference.md
bkmr/tests/resources/import_test/scripts/: backup.sh  deploy.py  hello-world.sh
bkmr/tests/service/: test_embeddings.rs
brew/: release.yml
db/: bkmr.db  bkmr.db.bkp  bkmr.v2.noembed.db  queries.sql
docs/: README.md  advanced_usage.md  bkmr.pptx  configuration.md  content-types.md  file-import-smart-editing.md  interpolation.md  lsp.md  search-interpolation.md  semantic-search.md  smart-actions.md  template-interpolation.md
resources/: documentation.pptx
scratch/: asciinema_script.txt  bkmr.cast  create.rs  delete.rs  migrate.rs  read.rs  update.rs
scripts/: openapi_embed.py  test-hsearch-cleanup.sh  test-hsearch-reset.sh  test-hsearch-setup.sh  test-hsearch-verify.sh
sql/: check_embed.sql  check_schema.sh  cmd.sql  compact.sql  csv-export.sql  csv.sql  experiments.sql  export.py  find_gaps.sql  find_nulls.sql  find_systemtag_violation.sql  import.py  import_csv.py
twbm/: Cargo.toml
(+47 files in other folders)
