[project]
name = "bkmr"
version = "1.1.10"
description = "Super fast bookmark manager with semantic full text search'"
authors = [
    {name = "sysid", email = "sysid@gmx.de"},
]
dependencies = [
    "openai>=1.13.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "maturin",
]


[tool.bumpversion]
current_version = "1.1.10"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
#search = "{current_version}"
#replace = "{new_version}"
search = "version = \"{current_version}\""  # Updated to match the full line precisely
replace = "version = \"{new_version}\""  # Matches the format of the search pattern
regex = true
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[tool.bumpversion.file_patterns]
"VERSION" = [
    { search = "^{current_version}", replace = "{new_version}",  regex = true },
]

[[tool.bumpversion.files]]
filename = "VERSION"
search = "{current_version}"
replace = "{new_version}"
regex = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "bkmr/Cargo.toml"
