[package]
name = "bkmr"
version = "4.25.1"
edition = "2021"
description = "A Unified CLI Tool for Bookmark, Snippet, and Knowledge Management"
repository = "https://github.com/sysid/bkmr"
readme = "../README.md"
license = "BSD-3-Clause"
authors = ["sysid <sysid@gmx.de>"]
homepage = "https://github.com/sysid/bkmr"
keywords = ["bookmark", "cli", "terminal", "snippet", "launcher"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.5.0"
bincode = "2.0.1"
byteorder = "1.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["unstable-doc"] }
clap_complete = "4.5.50"
crossterm = "0.29.0"
derive_builder = "0.20.2"
diesel = { version = "2.2.10", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2.2.0"
dirs = "6.0.0"
fs_extra = "1.3.0"
indoc = "2.0.6"
itertools = "0.14.0"
maplit = "1.0.2"
markdown = "1.0.0"
md5 = "0.7.0"
minijinja = "2.10.2"
ndarray = "0.16.1"
open = "5.3.2"
predicates = "3.1.3"
rand = "0.9.1"
regex = "1.11.1"
reqwest = {version = "0.12.15", features = ["blocking", "json"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }  # https://github.com/sysid/bkmr/issues/6#issuecomment-1435966997
rustyline = "15.0.0"
select = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde_with = {version = "3.12.0", features =["chrono"] }
shellexpand = "3.1.1"
skim = "0.17.2"
tempfile = "3.19.1"
termcolor = "1.4.1"
thiserror = "2.0.12"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tuikit = "0.5.0"
url = "2.5.4"

[dev-dependencies]
assert_cmd = "2.0.17"
float-cmp = "0.10.0"
serial_test = "3.2.0"

[build-dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module", "anyhow"] }


[profile.release]
codegen-units = 1
lto = true
