[package]
name = "bkmr"
version = "7.2.0"
edition = "2021"
description = "Knowledge management for humans and agents — bookmarks, snippets, etc, searchable, executable."
repository = "https://github.com/sysid/bkmr"
readme = "../README.md"
license = "BSD-3-Clause"
authors = ["sysid <sysid@gmx.de>"]
homepage = "https://github.com/sysid/bkmr"
keywords = ["bookmark", "cli", "terminal", "snippet", "launcher"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["unstable-doc"] }
clap_complete = "4.6.0"
crossterm = "0.29.0"
# ratatui version pinned to match skim's dependency
ratatui = "0.30.0"
derive_builder = "0.20.2"
diesel = { version = "2.3.7", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2.3.1"
dirs = "6.0.0"
fs_extra = "1.3.0"
ignore = "0.4.25"
itertools = "0.14.0"
markdown = "1.0.0"
md5 = "0.7.0"
minijinja = "2.19.0"
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls", "image-models"] }
open = "5.3.3"
regex = "1.12.3"
reqwest = {version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }  # https://github.com/sysid/bkmr/issues/6#issuecomment-1435966997
sqlite-vec = "0.1.6"
rustyline = "15.0.0"
select = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
serde_with = {version = "3.18.0", features =["chrono"] }
sha2 = "0.10.9"
shellexpand = "3.1.2"
skim = "4.4.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "0.8.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
zerocopy = { version = "0.7", features = ["derive"] }

# LSP dependencies (always included)
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std", "time", "process", "sync"] }
async-trait = "0.1"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"

[build-dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "anyhow"] }


[profile.release]
codegen-units = 1
lto = true
